# Open-Human-Agent-Protocol

./: CONTRIBUTING.md  LICENSE  PROJECT-STRUCTURE.md  PYTHON-SDK.md  README.md  README.zh.md  package.json  pyproject.toml  tsconfig.json
.github/workflows/: deploy-docs.yml
.vitepress/: config.ts
doc/: sdk-python.md  sdk.md
doc/zh/: sdk-python.md  sdk.md
docs/: index.md
docs/.vitepress/: config.ts
docs/zh/: api-examples.md  index.md  markdown-examples.md
examples/: README.md  basic-workflow.ts  basic_workflow_python.py
javascript/: package.json  tsconfig.json  vite.config.ts
javascript/src/: index.ts  validator.ts
python/: README.md  requirements.txt  setup.py
python/ohap/: __init__.py  __main__.py  client.py  types.py  validator.py
python/tests/: __init__.py  test_client.py
schema/: README.md  contract.schema.json  deliverable.schema.json  proposal.schema.json  review.schema.json  task.schema.json
schema/examples/: README.md  deliverable-example.json  proposal-example.json  task-example.json
src/: types.ts
