[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ohap-sdk"
version = "0.1.0"
description = "Official Python SDK for the Open Human Agent Protocol"
readme = "python/README.md"
license = {text = "MIT"}
authors = [
    {name = "OHAP Community", email = "contact@ohap.org"}
]
keywords = ["ohap", "human-ai-collaboration", "protocol", "sdk", "fusion-workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Office/Business",
]

requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
]

[project.urls]
Homepage = "https://github.com/your-org/Open-Human-Agent-Protocol"
Documentation = "https://ohap.org/docs/python"
Repository = "https://github.com/your-org/Open-Human-Agent-Protocol"
"Bug Tracker" = "https://github.com/your-org/Open-Human-Agent-Protocol/issues"

[tool.setuptools]
packages = ["ohap"]
package-dir = {"" = "python"}

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target-version = ['py38']
